fix(): fixing infinite loop whooops

--- a/src/app/chords/chords.component.html
+++ b/src/app/chords/chords.component.html
@@ -23,9 +23,9 @@
             <ss-multiselect-dropdown [options]="selectedQuality" [(ngModel)]="qualityOptionsModel" (ngModelChange)="qualityChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
           </div>
 
-          <div class="random-chord-selector">
-            Use enharmonic chord names: FALSE
-          </div>
+          <!--<div class="random-chord-selector">-->
+            <!--Use enharmonic chord names: FALSE-->
+          <!--</div>-->
 
           <div class="random-chord-selector">
             Number of chords shown:
