--- a/src/app/chords/chords.component.css
+++ b/src/app/chords/chords.component.css
@@ -28,20 +28,22 @@
 
 .current-chord {
   color: black;
-  /*font-size: 4rem;*/
   font-size: 1.5rem;
   font-weight: 500;
-  height: 80px;
-  /*width: 300px;*/
-  width: 146px;
-  text-align: center;
-  background: rgba(211, 211, 211, 0.25);
-  padding-top: 21px;
-  border: 1px solid #868e96;
+  height: 52px;
+  width: 128px;
+  text-align: left;
+  /* background: rgba(211, 211, 211, 0.25); */
+  padding-top: 5px;
+  border-left: 1px solid #868e96;
+  padding-left: 7px;
+  letter-spacing: -1.5px;
+  margin-bottom: 18px;
 }
 
 .highlighted-chord {
-  background-color: #FBF987;
+  /*background-color: #FBF987;*/
+  background-color: #f9eb0d94;
 }
 
 .last-chord-in-group {
@@ -79,12 +81,16 @@
     color: black;
     font-size: 1rem;
     font-weight: 400;
-    height: 62px;
-    width: 68px;
-    text-align: center;
+    /*width: 68px;*/
     width: 80px;
-    padding-top: 21px;
-    border: .3px solid #868e96ab;
+    height: 36px;
+    text-align: left;
+    /* background: rgba(211, 211, 211, 0.25); */
+    padding-top: 5px;
+    border-left: .5px solid #868e96;
+    padding-left: 4px;
+    letter-spacing: -1.5px;
+    margin-bottom: 13px;
   }
   .last-chord-in-group {
     border-right: 3px solid #000;
