--- a/src/app/chords/chords.component.css
+++ b/src/app/chords/chords.component.css
@@ -42,8 +42,8 @@
 }
 
 .highlighted-chord {
-  /*background-color: #FBF987;*/
-  background-color: #f9eb0d94;
+  background-color: #FBF987;
+  /*background-color: #f9eb0d94;*/
 }
 
 .last-chord-in-group {
@@ -77,20 +77,25 @@
 }
 
 @media screen and (max-width:680px) {
+  .chord-display {
+    margin-top: 10px;
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+
   .current-chord {
     color: black;
-    font-size: 1rem;
-    font-weight: 400;
-    /*width: 68px;*/
-    width: 80px;
-    height: 36px;
-    text-align: left;
     /* background: rgba(211, 211, 211, 0.25); */
+    font-size: 1.3rem;
+    font-weight: 400;
+    width: 84px;
+    height: 38px;
+    text-align: left;
     padding-top: 5px;
     border-left: .5px solid #868e96;
-    padding-left: 4px;
-    letter-spacing: -1.5px;
-    margin-bottom: 13px;
+    padding-left: 3px;
+    letter-spacing: -1.8px;
+    margin-bottom: 12px;
   }
   .last-chord-in-group {
     border-right: 3px solid #000;
