--- a/src/app/chords/chords.component.html
+++ b/src/app/chords/chords.component.html
@@ -1,73 +1,87 @@
 <div class="chords-main">
-<h2 *ngIf="!isPlaying">Random Chords</h2>
+  <h2 *ngIf="!isPlaying">Chord Generator</h2>
 
-<ngb-alert *ngIf="showInfoAlert" type="light" [dismissible]="false">
-    Select your options and press play!
-</ngb-alert>
+  <div *ngIf="isPlaying && showMetronome" class="metronome-container">
+    <div *ngFor="let dot of metronomeLights" class="met-beat" [ngClass]="{'active-met-beat': dot.active}"></div>
+    <span class="measure-counter">{{measureIntervalCounter}}/{{measureInterval}}</span>
+  </div>
 
-<ngb-accordion *ngIf="!isPlaying" #acc="ngbAccordion" activeIds="">
-  <ngb-panel title="Chord Options">
-    <ng-template ngbPanelContent>
-        <div>
-          <div class="random-chord-selector">
-            Root Note:
-            <ss-multiselect-dropdown [options]="selectedChords" [(ngModel)]="chordOptionsModel" (ngModelChange)="chordOptionsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
-          </div>
+  <ngb-alert *ngIf="showInfoAlert" type="light" [dismissible]="false">
+      Select your options and press play! The app will randomly select chords from your settings.
+  </ngb-alert>
 
-          <div class="random-chord-selector">
-            Chord Pattern:
-            <ss-multiselect-dropdown [options]="selectedChordPattern" [(ngModel)]="chordPatternsModel" (ngModelChange)="chordPatternsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
-          </div>
-
-          <div class="random-chord-selector">
-            Quality of single chords:
-            <ss-multiselect-dropdown [options]="selectedQuality" [(ngModel)]="qualityOptionsModel" (ngModelChange)="qualityOptionsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
-          </div>
-
-          <div class="random-chord-selector">
-            <div class="random-chord-selector" id="chordPreviewBox">
-              Number of chords shown: <span id="chordPreviewCount">{{chordPreviewCount}}</span>
-              <input class="preview-count-slider" name="ram" type="range" min="1.0" max="120.0" step="1"  [(ngModel)]="chordPreviewCount" (ngModelChange)="chordPreviewCountChanged($event)">
+  <ngb-accordion *ngIf="!isPlaying" #acc="ngbAccordion" activeIds="">
+    <ngb-panel title="Chord Options">
+      <ng-template ngbPanelContent>
+          <div>
+            <div class="random-chord-selector">
+              Root Note:
+              <ss-multiselect-dropdown [options]="selectedChords" [(ngModel)]="chordOptionsModel" (ngModelChange)="chordOptionsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
             </div>
+
+            <div class="random-chord-selector">
+              Chord Pattern:
+              <ss-multiselect-dropdown [options]="selectedChordPattern" [(ngModel)]="chordPatternsModel" (ngModelChange)="chordPatternsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
+            </div>
+
+            <div class="random-chord-selector">
+              Quality of single chords:
+              <ss-multiselect-dropdown [options]="selectedQuality" [(ngModel)]="qualityOptionsModel" (ngModelChange)="qualityOptionsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
+            </div>
+
+            <div class="random-chord-selector">
+              <div class="random-chord-selector" id="chordPreviewBox">
+                Number of chords shown: <span id="chordPreviewCount">{{chordPreviewCount}}</span>
+                <input class="preview-count-slider" name="ram" type="range" min="1.0" max="120.0" step="1"  [(ngModel)]="chordPreviewCount" (ngModelChange)="chordPreviewCountChanged($event)">
+              </div>
+            </div>
+
+            <div class="random-chord-selector">
+              Generate new chords on loop:
+              <input type="checkbox" [(ngModel)]="regenerateChordsOnLoop" (ngModelChange)="regenerateChordsOnLoopChanged($event)">
+            </div>
+
+          </div>
+      </ng-template>
+    </ngb-panel>
+    <ngb-panel title="Metronome Options">
+      <ng-template ngbPanelContent>
+        <div id="controls">
+
+          <div class="random-chord-selector" id="tempoBox">
+            Tempo: <span id="showTempo">{{tempo}}</span> BPM
+            <input class="tempo-slider" name="ram" type="range" min="30.0" max="380.0" step="1"  [(ngModel)]="tempo" (ngModelChange)="tempoChanged($event)">
           </div>
 
-        </div>
-    </ng-template>
-  </ngb-panel>
-  <ngb-panel title="Metronome Options">
-    <ng-template ngbPanelContent>
-      <div id="controls">
-
-        <div class="random-chord-selector" id="tempoBox">
-          Tempo: <span id="showTempo">{{tempo}}</span> BPM
-          <input class="tempo-slider" name="ram" type="range" min="30.0" max="380.0" step="1"  [(ngModel)]="tempo" (ngModelChange)="tempoChanged($event)">
-        </div>
-
-        <div>
-          <div class="random-chord-selector">
-            Beats:
-            <ss-multiselect-dropdown [options]="selectedBeat" [(ngModel)]="beatOptionsModel" (ngModelChange)="beatOptionsModelChanged($event)" [settings]="singleAnswerSettings"></ss-multiselect-dropdown>
-          </div>
+          <div>
+            <div class="random-chord-selector">
+              Beats:
+              <ss-multiselect-dropdown [options]="selectedBeat" [(ngModel)]="beatOptionsModel" (ngModelChange)="beatOptionsModelChanged($event)" [settings]="singleAnswerSettings"></ss-multiselect-dropdown>
+            </div>
 
             <div class="random-chord-selector">
               Measures Between Chord Change:
               <ss-multiselect-dropdown [options]="selectedMeasureInterval" [(ngModel)]="measureIntervalOptionsModel" (ngModelChange)="measureIntervalOptionsModelChanged($event)" [settings]="singleAnswerSettings"></ss-multiselect-dropdown>
-              <!--<span>{{measureIntervalCounter}}/{{measureInterval}}</span>-->
             </div>
+
+            <div class="random-chord-selector">
+              Show metronome:
+              <input type="checkbox" [(ngModel)]="showMetronome" (ngModelChange)="showMetronomeChanged($event)">
+            </div>
+          </div>
         </div>
-      </div>
-    </ng-template>
-  </ngb-panel>
-</ngb-accordion>
+      </ng-template>
+    </ngb-panel>
+  </ngb-accordion>
 
-<div class="chord-display">
-  <div *ngFor="let currentChord of chordQueue; let idx = index"
-    class="chord current-chord"
-    [ngClass]="{'last-chord-in-group': currentChord.isLastInGroup, 'highlighted-chord': idx===currentChordIndex}">{{ currentChord.name }}</div>
-</div>
+  <div class="chord-display">
+    <div *ngFor="let currentChord of chordQueue; let idx = index"
+      class="chord current-chord" id="chord-{{idx}}"
+      [ngClass]="{'last-chord-in-group': currentChord.isLastInGroup, 'highlighted-chord': idx===currentChordIndex}">{{ currentChord.name }}</div>
+  </div>
 
-<div class="fixed-footer">
-  <div><button id="startstop-button" class="btn btn-primary control-button" (click)="playpause()">{{startStopMessage}}</button></div>
-  <div><button id="scramble" class="btn btn-primary control-button" (click)="scramble()">Scramble</button></div>
-</div>
+  <div class="fixed-footer">
+    <div><button id="startstop-button" class="btn btn-primary control-button" (click)="playpause()">{{startStopMessage}}</button></div>
+    <div><button id="scramble" class="btn btn-primary control-button" (click)="scramble()">Scramble</button></div>
+  </div>
 </div>
