--- a/src/app/shared/top-navigation/top-navigation.component.css
+++ b/src/app/shared/top-navigation/top-navigation.component.css
@@ -4,6 +4,9 @@ ul.topnav {
   padding: 0;
   overflow: hidden;
   background-color: #868e96;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 ul.topnav li {float: left;}
@@ -31,7 +34,7 @@ ul.topnav li.icon {display: none;}
 }
 
 @media screen and (max-width:680px) {
-  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive {position: fixed;}
   ul.topnav.responsive li.icon {
     position: absolute;
     right: 0;
