--- a/src/app/chords/chords.component.css
+++ b/src/app/chords/chords.component.css
@@ -146,3 +146,34 @@
     font-size: 1.5rem;
   }
 }
+
+/*iphone 5*/
+@media screen and (max-width:321px) {
+  .chord-display {
+    margin-top: 10px;
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+
+  .current-chord {
+    font-size: 1rem;
+    font-weight: 400;
+    width: 74px;
+    height: 38px;
+    text-align: left;
+    padding-top: 5px;
+    border-left: .5px solid #868e96;
+    padding-left: 3px;
+    letter-spacing: -1.8px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+
+  .last-chord-in-group {
+    border-right: 3px solid #000;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+}
