--- a/src/app/chords/chords.component.css
+++ b/src/app/chords/chords.component.css
@@ -1,5 +1,5 @@
 .random-chord-selector {
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 .tempo-slider {
@@ -115,6 +115,74 @@
   padding-left: 5px;
   padding-top: 1px;
 }
+
+/* Slider option CSS============================================*/
+.switch-with-label {
+  display: flex;
+  display: -webkit-flex;
+  /*Height of 34px plus two margins of 5px*/
+  height: 44px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 5px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #3fb0ac;;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #3fb0ac;;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+/*End Slider option css============================================*/
 
 @media screen and (max-width:680px) {
   .chord-display {
