--- a/src/app/chords/chords.component.html
+++ b/src/app/chords/chords.component.html
@@ -1,5 +1,5 @@
 <div class="chords-main">
-  <h2 *ngIf="!isPlaying">Chord Generator</h2>
+  <h2 *ngIf="!isPlaying">Chord Coach</h2>
 
   <div *ngIf="showMetronome" class="metronome-container">
     <div *ngFor="let dot of metronomeLights" class="met-beat" [ngClass]="{'active-met-beat': dot.active}"></div>
