fixing dropdown css and bumping to angular 5

--- a/src/app/chords/chords.component.html
+++ b/src/app/chords/chords.component.html
@@ -21,7 +21,7 @@
 
             <div class="random-chord-selector">
               Chord Pattern:
-              <ss-multiselect-dropdown [options]="selectedChordPattern" [(ngModel)]="chordPatternsModel" (ngModelChange)="chordPatternsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
+              <ss-multiselect-dropdown [options]="selectedChordPattern" [(ngModel)]="chordPatternsModel" (ngModelChange)="chordPatternsModelChanged($event)" [settings]="multiAnswerSettingsLongNames"></ss-multiselect-dropdown>
             </div>
 
             <div class="random-chord-selector">
