--- a/src/app/shared/top-navigation/top-navigation.component.css
+++ b/src/app/shared/top-navigation/top-navigation.component.css
@@ -13,7 +13,7 @@ ul.topnav li {float: left;}
 
 ul.topnav li a {
   display: inline-block;
-  color: #f2f2f2;
+  color: #f2f2f2 !important;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
