--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,20 @@ body {
   border-radius: 50%;
 }
 
+a {
+  color: #212529 !important;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3f4246 !important;
+  text-decoration: none;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  background-color: #868e9630 !important;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
