--- a/src/app/chords/chords.component.html
+++ b/src/app/chords/chords.component.html
@@ -10,10 +10,20 @@
       Select your options and press play! The app will randomly select chords from your settings.
   </ngb-alert>
 
+<!--   <ngb-alert *ngIf="alert" [type]="alert.type" [dismissible]="false">{{alert.message}}</ngb-alert> -->
+
   <ngb-accordion *ngIf="!isPlaying" #acc="ngbAccordion" activeIds="">
     <ngb-panel title="Chord Options">
       <ng-template ngbPanelContent>
           <div>
+
+            <div class="random-chord-selector">
+              <div class="random-chord-selector" id="chordPreviewBox">
+                Number of chords shown: <span id="chordPreviewCount">{{chordPreviewCount}}</span>
+                <input class="preview-count-slider" name="ram" type="range" min="1.0" max="120.0" step="1"  [(ngModel)]="chordPreviewCount" (ngModelChange)="chordPreviewCountChanged($event)">
+              </div>
+            </div>
+
             <div class="random-chord-selector">
               Root Note:
               <ss-multiselect-dropdown [options]="selectedChords" [(ngModel)]="chordOptionsModel" (ngModelChange)="chordOptionsModelChanged($event)" [settings]="multiAnswerSettings"></ss-multiselect-dropdown>
@@ -30,11 +40,24 @@
             </div>
 
             <div class="random-chord-selector">
-              <div class="random-chord-selector" id="chordPreviewBox">
-                Number of chords shown: <span id="chordPreviewCount">{{chordPreviewCount}}</span>
-                <input class="preview-count-slider" name="ram" type="range" min="1.0" max="120.0" step="1"  [(ngModel)]="chordPreviewCount" (ngModelChange)="chordPreviewCountChanged($event)">
+              Custom pattern (Major only for now):
+              <div class="chord-select-container">
+                <div *ngFor="let chord of customPatternChordsOptions; let idx = index">
+                  <button id="ChordNote" class="btn chord-note-button" (click)="addChordToActiveCustomPattern(chord)">{{ chord.name.romanNumeral }}</button>
+                </div>
               </div>
-            </div>
+
+              <div class="pattern-list-container">
+                <button [disabled]="!activeCustomPattern.length" id="ChordNote" class="btn add-active-pattern-list-item" (click)="addActiveCustomPattern()">+</button>
+                <div *ngFor="let chord of activeCustomPattern; let idx = index" class="active-pattern-list-item" (click)="removeChordFromActiveCustomPattern(chord)">{{ chord.name.romanNumeral }}</div>
+              </div>
+
+              <div *ngFor="let customPatternKey of userChordPatterns; let idx = index" class="pattern-list-container">
+                <button id="RemoveCustomPattern" class="btn remove-pattern-list" (click)="removeCustomPattern(customPatternKey)">-</button>
+                <div class="pattern-list">{{ getCustomPatternName(customPatternKey) }}</div>
+              </div>
+           </div>
+
           </div>
       </ng-template>
     </ngb-panel>
